# oxygen

./: .gitignore  Cargo.toml  update.test.sh
.github/workflows/: rust.yml
crates/decode/: Cargo.toml
crates/decode/src/runtime/: constants.rs  decoder.rs
crates/decode/src/runtime/section/: data.rs  data_count.rs  element.rs  export.rs  import.rs  memory.rs  mod.rs  opcode.rs  table.rs  typings.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/oxygen/: Cargo.toml
crates/oxygen/src/: leb.rs
crates/oxygen/src/runtime/: mod.rs
crates/oxygen/src/runtime/section/: bytecode.rs  global.rs  types.rs
derive/: Cargo.toml
examples/: fib.c  fib.c.wasm  index.html  oxygen.wasm
src/: lib.rs
src/runtime/: decoder.rs  mod.rs
src/runtime/section/: code.rs  custom.rs  func.rs  start.rs
tests/: wasm.rs
