[package]
name = "oxygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
decode_derive = { path = "./derive" }
